Make NB more Python-y, less NB. Fix typo

--- a/tiny_amoeba_demo.ipynb
+++ b/tiny_amoeba_demo.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pylab inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import polygon\n",
     "import rasterizer\n",
     "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "#If testing the libraries this is helpful:\n",
+    "#%load_ext autoreload\n",
+    "#%autoreload 2"
    ]
   },
   {
@@ -65,7 +67,7 @@
     "        rasterizer.dda1(buf,segs[nseg],segs[nseg+1] )\n",
     "else:\n",
     "    # For nontarget, largely jitter all endpoints to disconnect ngon\n",
-    "    for nseg in range(len(coos)-1):\n",
+    "    for nseg in range(len(segs)-1):\n",
     "        segs[nseg] += np.random.randint(-5,5)\n",
     "        rasterizer.dda1(buf,segs[nseg],segs[nseg+1] )     \n",
     "plt.figure(figsize=(2,2))\n",
@@ -100,7 +102,7 @@
     "        rasterizer.dda1(buf,segs[nseg],segs[nseg+1] )\n",
     "else:\n",
     "    # For nontarget, largely jitter the endpoints to disconnect ngon\n",
-    "    for nseg in range(len(coos)-1):\n",
+    "    for nseg in range(len(segs)-1):\n",
     "        segs[nseg] += np.random.randint(-5,5)\n",
     "        rasterizer.dda1(buf,segs[nseg],segs[nseg+1] )\n",
     "\n",
